Reader: fix squashed emoji in IE11 (#11453)
* Reader: Fix IE11 tiled gallery tweemoji problem

Twemoji in iE11 tiled gallery captions look squashed. Fixed by creating a class and adding height and width.

* Reader: Fix IE11 squashed twemoji bug everywhere

Fix all squashed IE11 emoji regardless of where they are.  #6230ce6 fixed only emoji in .tiled-gallery-caption

Ref: #10028

--- a/assets/stylesheets/_main.scss
+++ b/assets/stylesheets/_main.scss
@@ -271,6 +271,7 @@ img.wp-smiley {
 	margin: 0;
 	padding: 0 0.2em;
 	vertical-align: -0.1em;
+	width: 1em;
 }
 
 /* =Media
